# piScope

./: .gitignore  COPYRIGHT  ChangeLog  MANIFEST.in  README.md  lincense.txt  pyproject.toml  readme.md  readme.txt  requirements.txt  setup.py
.github/workflows/: release.yml  testrelease.yml
Docker/: Dockerfile.petram  Dockerfile.petram-base  Dockerfile.petram-no-git  Dockerfile.piscope  Dockerfile.piscope.light  Dockerfile.wxpython-base  Readme.md  run_piscope.cmd  run_piscope.sh
_build_system/: build_utils.py
example/: D_antenna.stl  ToreSupra_example_wscope_book.bfz  g1120912016.01360  introduction_to_piscope.pptx  k1101119007.01000  optimizer_example.pfz  parametric_example.pfz  sample_annotation.bfz  sample_annotation.pfz  tsc_input  wscope_manual_IRFM.pptx
example/efit_files/: g1101119007.01000
example/images/: cmod_logo_official_better_color.eps  cmod_logo_official_better_color.ps  fig_shiraiwa_bpo.eps  image.eps  watermark.py
example/mdsplus/books/: efit_equilibirum.bfz  ip_example.bfz  (+4 more)
example/other_data_files/: cmod_tile_data.sav
example/subtrees/: IPSmini.pfs  connection_cmodws.pfs  connection_hopper.pfs  connection_laptop.pfs  efit_cmod.pfs  genray_loki.pfs  kefit_cmod.pfs  tsc_hopper.pfs  various_connections.pfs
macapplet/: build_log  piscope_macapplet.sh  piscope_not_macapplet.sh  readme  setup.py  setup_dist.py
python/: piscope.py
python/ifigure/: __init__.py  __main__.py  client.py  events.py  ifigure_app.py  ifigure_app_macport_fix.py  ifigure_config.py  interactive.py  numerical_function.py  piscope.py  server.py  startup.py
(+345 files in other folders)
