[project]
name = "piScope"
license = "GPL-3.0-only"
description = "piScope data analysis workbench"
authors = [ { name = "S. Shiraiwa" } ]
maintainers = [ { name = "S. Shiraiwa", email = "shiraiwa@princeton.edu" } ]
keywords = ["scientific computing", "python visualzation", "finite element method"]
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Topic :: Scientific/Engineering :: Physics",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
    "numpy>=2.3.0",
    "scipy",
    "matplotlib >= 3.10.3",
    "PyOpenGL",
    "netCDF4",
    "h5py",
    "PyPDF2",
    "pdfrw",
    "wxPython",
    "future",
    "autopep8",
    "scipy "
]

dynamic = ["version"]

[project.urls]
"Homepage" = "https://github.com/piScope"
"Download" = "https://github.com/piScope"

[project.scripts]
piscope = "ifigure:piscope"

[build-system]
requires = [
        "setuptools>=80.0.1",
        "pip>=25.1.0", 
]

[tool.setuptools]
package-dir = {"" = "python"}

[tool.setuptools.dynamic]
version = { attr = "ifigure.__version__" }


[tool.setuptools.package-data]
"ifigure.resources" = ["*.txt", "*/*/*.png", "*/*.png", "*.png", "pref/*_config", "pref/*_helper", "mdsplus/*"]
"ifigure.matplotlib_mod" = ["*.frag", "*.vert", "*.geom"]

